[package]
name = "cloudy_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RegenJacob/RainEngine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
puffin = { version = "0.14.1", optional = true }
bytemuck = "1.12.3"


[features]
debug = ["dep:puffin"]
default = ["debug"]
