[package]
name = "cloudy_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RegenJacob/RainEngine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
puffin = { version = "0.17", optional = true }
bytemuck = "1.14"
log = "0.4"
winit = "0.28"

[features]
debug = ["dep:puffin"]
default = ["debug"]

