[package]
name = "rain_editor"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/RegenJacob/egui_logger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_dock = { path = "../../../egui_dock/" }
bytemuck = { version = "1.14", features = ["derive"] }
puffin = "0.17.0"
puffin_egui = "0.23.0"
env_logger = "0.10.0"
log = "0.4"
serde = "1"

[dependencies.egui_logger]
#version = "0.2.1"
path = "../../../egui_logger"

[dependencies.cloudy_renderer]
path = "../cloudy_renderer/"

[dependencies.eframe]
version = "0.23"
default_features = false
features = ["wgpu", "default_fonts", "puffin"]

