[package]
name = "rain_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
puffin = { version = "0.14.1", optional = true }
bytemuck = "1.12.3"
log = "0.4.17"
winit = "0.27.5"

[dependencies.cloudy_renderer]
path = "../cloudy_renderer/"

[features]
debug = ["dep:puffin"]
default = ["debug"]

